# ot-harjoitustyo

./: README.md
dokumentaatio/: changelog.md  pyproject.toml  tasks.py  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/src/: index.py  pyproject.toml  tasks.py
dokumentaatio/src/tests/: peli_test.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
tasohyppelypeli/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
tasohyppelypeli/dokumentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
tasohyppelypeli/dokumentaatio/kuvat/: luokkakaavio  nimetön kaavio.drawio  sekvenssi.drawio  sekvenssikaavio
tasohyppelypeli/src/: index.py  my_platform.py  platform.py  player.py  tasks.py
tasohyppelypeli/src/tests/: index_test.py  peli_test.py  platform_test.py
